[package]
name = "ck2parser"
version = "0.1.0"
authors = ["J. Zebedee <zebedee@code.gripe>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
pest = "2.1.1"
pest_derive = "2.1.0"
encoding_rs = "0.8.17"
encoding_rs_io = "0.1.6"